@@ -1,3 +1,7 @@
+2008-02-04  Michael Stucki  <michael@typo3.org>
+
+	* Fixed bug #7295: sysext/dbal/: Uninitialized variable in ->handler_getFromTableList() (Patch by Oliver Klee)
+
 2008-02-04  Oliver Hader  <oh@inpublica.de>
 
 	* (feature) Added feature #5242: IRRE - Storage page for child records
